[gd_scene load_steps=17 format=3 uid="uid://t0i6il5kikp5"]

[ext_resource type="Script" path="res://scripts/Enemies/alien_g.gd" id="1_86ji5"]
[ext_resource type="Texture2D" uid="uid://d3fb3p1ww6tnv" path="res://assets/SBGJ_Assets/AGJ_Enemy1_Idle.png" id="2_1tojo"]
[ext_resource type="Texture2D" uid="uid://ci044n0h27ybb" path="res://assets/SBGJ_Assets/AGJ_Enemy1_Sprint.png" id="3_55hpf"]
[ext_resource type="Texture2D" uid="uid://crkf7tiruyolt" path="res://assets/SBGJ_Assets/AGJ_Enemy1_Attack.png" id="4_as421"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xkjeu"]
atlas = ExtResource("2_1tojo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jcvr"]
atlas = ExtResource("2_1tojo")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwnud"]
atlas = ExtResource("3_55hpf")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejp2w"]
atlas = ExtResource("3_55hpf")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pafwa"]
atlas = ExtResource("4_as421")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkurd"]
atlas = ExtResource("4_as421")
region = Rect2(36, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vcr0"]
atlas = ExtResource("4_as421")
region = Rect2(72, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e48bp"]
atlas = ExtResource("4_as421")
region = Rect2(108, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_cy4bb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkjeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jcvr")
}],
"loop": true,
"name": &"Idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwnud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejp2w")
}],
"loop": true,
"name": &"Move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pafwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkurd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vcr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e48bp")
}],
"loop": true,
"name": &"bro fell ðŸ’€",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qay4l"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wli5u"]
radius = 36.0555

[sub_resource type="CircleShape2D" id="CircleShape2D_d87qw"]
radius = 10.198

[node name="AlienG" type="CharacterBody2D"]
script = ExtResource("1_86ji5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_cy4bb")
animation = &"bro fell ðŸ’€"
frame_progress = 0.507085

[node name="basic_collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_qay4l")

[node name="detection area" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection area"]
visible = false
shape = SubResource("CircleShape2D_wli5u")

[node name="Hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_d87qw")

[connection signal="body_entered" from="detection area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
